--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="..\stylecop.json" />
+    <AdditionalFiles Include="../stylecop.json">
+      <Visible>false</Visible>
+    </AdditionalFiles>
   </ItemGroup>
   
   <ItemGroup>
