--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -5,9 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-  
+
   <ItemGroup>
-    <AdditionalFiles Include="..\stylecop.json" />
+    <AdditionalFiles Include="../stylecop.json">
+      <Visible>false</Visible>
+    </AdditionalFiles>
   </ItemGroup>
   
   <ItemGroup>
@@ -18,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Model\" />
   </ItemGroup>
 
 </Project>
