--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDbConnectionString": "server=localhost;database=Transport;User=admin;Password=1234;"
+  }
 }
