--- a/Backend/API.csproj
+++ b/Backend/API.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Persistence\Persistence.csproj" />
   </ItemGroup>
 
