--- a/API/API.csproj
+++ b/API/API.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Content Include="appsettings.example.json.default" />
+    <None Include="appsettings.example.json" />
   </ItemGroup>
  
   <ItemGroup>
