--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -1,9 +1,8 @@
 name: Build and Deploy to K3s
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    branches: [10-cicd-deployment-tests]
 
 jobs:
   build-and-push:
@@ -13,7 +12,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
