Add more run conditions

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -3,6 +3,10 @@ name: Build and Deploy to K3s
 on:
   pull_request:
     branches: [devops/10-cicd-deployment-tests]
+  types:
+    - opened
+    - reopened
+    - synchronize
 
 jobs:
   build-and-push:
