--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -25,9 +25,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Install qemu
+        run: |
+          apt install qemu-user-static
+
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/wspolny-dojazd:backend .
+          docker build --platform arm64 -t ${{ secrets.DOCKER_USERNAME }}/wspolny-dojazd:backend .
 
       - name: Push Docker image
         run: |
