Fix qemu install

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -25,9 +25,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Install qemu
-        run: |
-          apt install qemu-user-static
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Build Docker image
         run: |
