Add XML comments support to Swagger

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -11,6 +11,16 @@
 	  <Visible>false</Visible> 
     </AdditionalFiles>
   </ItemGroup>
+
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="$(OutputPath)$(AssemblyName).xml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </None>
+  </ItemGroup>
  
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.14" />
