--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -12,11 +12,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+      - uses: actions/setup-dotnet@v4
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          dotnet-version: '8.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore Backend.sln
+
+      - name: Install EF tooling
+        run: dotnet tool install --global dotnet-ef
+
+      - name: Create EF Migrations Bundle
+        run: dotnet ef migrations bundle
+
+      - name: Publish
+        run: dotnet publish --ucr --artifacts-path artifacts
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -24,6 +34,12 @@ jobs:
       - name: Build Docker image
         run: |
           docker build --platform arm64 -t ${{ secrets.DOCKER_USERNAME }}/wspolny-dojazd:backend .
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker image
         run: |
