--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -10,7 +10,7 @@ env:
 jobs:
   build-and-push:
     name: Build and push ⛏
-    runs-on: ubuntu-24.04-arm64
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
