--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -10,15 +10,15 @@ env:
 jobs:
   build-and-push:
     name: Build and push ⛏
-    runs-on: ubuntu-latest
+    runs-on: 8.0-bookworm-slim-arm64v8
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.0.x'
+      # - uses: actions/setup-dotnet@v4
+      #   with:
+      #     dotnet-version: '8.0.x'
 
       - name: Install EF tooling
         run: dotnet tool install --global dotnet-ef
