--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -10,7 +10,7 @@ env:
 jobs:
   build-and-push:
     name: Build and push ⛏
-    runs-on: 8.0-bookworm-slim-arm64v8
+    runs-on: ubuntu-22.04-arm
 
     steps:
       - name: Checkout repository
