--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -3,20 +3,40 @@ name: Build and Deploy to K3s
 on:
   workflow_dispatch:
 
+env:
+  ConnectionStrings__AppDbConnectionString: Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;
+  DB_SERVER_VERSION: 8.0.43
+
 jobs:
   build-and-push:
     name: Build and push ⛏
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04-arm
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Install EF tooling
+        run: dotnet tool install --global dotnet-ef
+
+      - name: Restore dependencies
+        run: dotnet restore Backend.sln --ucr
+
+      - name: Build
+        run: dotnet build --ucr -c Debug --no-restore
+
+      - name: Create EF Migrations Bundle for DatabaseContext
+        run: |
+          cp ./Persistence/bin/Debug/net8.0/linux-*/* ./Persistence/bin/Debug/net8.0/
+          dotnet ef migrations bundle --project Persistence/Persistence.csproj --context DatabaseContext -o DatabaseContextBundle --self-contained --no-build
+
+      - name: Create EF Migrations Bundle for PTSDbContext
+        run: |
+          cp ./PublicTransportService/bin/Debug/net8.0/linux-*/* ./PublicTransportService/bin/Debug/net8.0/
+          dotnet ef migrations bundle --project PublicTransportService/PublicTransportService.csproj --context PTSDbContext -o PTSDbContextBundle --self-contained --no-build
+
+      - name: Publish
+        run: dotnet publish --ucr --artifacts-path artifacts --nologo --self-contained
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -24,6 +44,12 @@ jobs:
       - name: Build Docker image
         run: |
           docker build --platform arm64 -t ${{ secrets.DOCKER_USERNAME }}/wspolny-dojazd:backend .
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker image
         run: |
