--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -36,7 +36,7 @@ jobs:
           dotnet ef migrations bundle --project PublicTransportService/PublicTransportService.csproj --context PTSDbContext -o PTSDbContextBundle --self-contained --no-build
 
       - name: Publish
-        run: dotnet publish --ucr --artifacts-path artifacts --nologo --self-contained
+        run: dotnet publish --ucr --artifacts-path artifacts --nologo --self-contained API/API.csproj
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
