--- a/Tools/GtfsImporter/Dockerfile
+++ b/Tools/GtfsImporter/Dockerfile
@@ -5,10 +5,10 @@ FROM --platform=arm64 ubuntu:latest
 WORKDIR /app
 
 # Copy the entire source code into the container
-COPY ./artifacts/publish/GtfsImporter .
+COPY artifacts/publish .
 
 # Install required lib in order to support globalization
 RUN apt-get update && apt-get install -y libicu-dev
 
 # Run the application
-CMD ./release/GtfsImporter
+CMD ./GtfsImporter/release/GtfsImporter
