--- a/.github/workflows/build-check.yaml
+++ b/.github/workflows/build-check.yaml
@@ -10,6 +10,9 @@ concurrency:
   group: build-${{ github.head_ref }}
   cancel-in-progress: true
 
+permissions:
+  pull-requests: write
+
 jobs:
   build:
     name: Build Check
