--- a/.github/workflows/build-check.yaml
+++ b/.github/workflows/build-check.yaml
@@ -13,6 +13,10 @@ concurrency:
 permissions:
   pull-requests: write
 
+env:
+  ConnectionStrings__AppDbConnectionString: Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;
+  DB_SERVER_VERSION: 8.0.43
+
 jobs:
   build:
     name: Build Check
@@ -32,7 +36,7 @@ jobs:
         id: dotnet-build
         run: | 
           dotnet build --ucr -c Debug --no-restore -warnaserror:false -v:minimal > build.log
-          grep -E "(SA[0-9]{4}|CS[0-9]{4})" build.log > warnings.txt
+          grep -E "(?!SA0001)(SA[0-9]{4}|CS[0-9]{4})" build.log > warnings.txt
           echo "warnings<<EOF" >> $GITHUB_OUTPUT
           cat warnings.txt >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
