--- a/.github/workflows/build-check.yaml
+++ b/.github/workflows/build-check.yaml
@@ -20,7 +20,7 @@ env:
 jobs:
   build:
     name: Build Check
-
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-22.04-arm
     steps:
       - name: Checkout repository
