Rename method in FriendsController and enable XML comments analysis.

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -6,6 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+	<None Update="$(OutputPath)$(AssemblyName).xml">
+		<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	</None>
+  </ItemGroup>
+
   <ItemGroup>
     <AdditionalFiles Include="../stylecop.json">
       <Visible>false</Visible>
