Add StyleCop to Shared

--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -23,4 +23,10 @@
 	</PackageReference>	
   </ItemGroup>
 
+  <ItemGroup>
+	<AdditionalFiles Include="../stylecop.json">
+		<Visible>false</Visible>
+	</AdditionalFiles>
+  </ItemGroup>
+
 </Project>
